[package]
name = "binance_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"
regex = "1"
serde_json = "1.0.88"
serde = { version = "1.0.147", features = ["derive"] }
rust_decimal = "1.27"
rust_decimal_macros = "1.27"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
hmac = "0.11.0"
sha2 = "0.9"
hex = "0.4"